# qtpython

./: CMakeLists.txt  CMakePresets.json  README.md  versions.txt
.github/workflows/: spack-ci.yml  spack-ubuntu.yml
cmake/: common.cmake  organization.cmake  python_binding.cmake  version.cmake
src/: CMakeLists.txt
src/QtPyConsole/: CMakeLists.txt  QtPythonInterpretorMainWindow.cpp  QtPythonInterpretorMainWindow.h  python_console.cpp
src/QtPyConsole3/: CMakeLists.txt  QtPython3InterpretorMainWindow.cpp  QtPython3InterpretorMainWindow.h  python_console3.cpp
src/QtPython/: CMakeLists.txt  QtPython.cpp  QtPython.doxygen  QtPython.qrc  QtPythonCalls.cpp  QtPythonConsole.cpp  QtPythonSyntaxHighlighter.cpp
src/QtPython/cmake/: QtPythonConfig.cmake.in
src/QtPython/public/QtPython/: QtPython.h  QtPythonCalls.h  QtPythonConsole.h  QtPythonSyntaxHighlighter.h
src/QtPython3/: CMakeLists.txt  QtPython.cpp  QtPython3.doxygen  QtPythonConsole.cpp  QtPythonSyntaxHighlighter.cpp
src/QtPython3/cmake/: QtPython3Config.cmake.in  QtPython3Distribution.h.in
src/QtPython3/public/QtPython3/: QtPython.h  QtPythonConsole.h  QtPythonSyntaxHighlighter.h
src/etc/python2/: NECCompleter.py  NECCompletionSession.py  NECDebuggingSession.py  NECPdb.py
src/etc/python3/: NECCompleter.py  NECCompletionSession.py
src/run/: PyConsole
test_link/: CMakeLists.txt  main.cpp
